<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_small"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btRewardedVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rewarded_video" />

    <Button
        android:id="@+id/btInterstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interstitial" />

    <Button
        android:id="@+id/btNativeBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_banner" />

    <Button
        android:id="@+id/btStandardBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/standard_banner" />

</androidx.appcompat.widget.LinearLayoutCompat>