<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_small"
    tools:context=".NativeBannerActivity">

    <Button
        android:id="@+id/request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show" />

    <Button
        android:id="@+id/destroy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destroy" />

    <TextView
        android:id="@+id/log_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="#ddd"
        android:padding="8dp" />

    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
